Fix more contrast issues

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -53,6 +53,7 @@ $my-dark-theme: mat.define-dark-theme((color: (primary: $my-primary,accent: $my-
 .mat-card, .color-scheme-card
     --background: #{mat.get-color-from-palette(mat.$light-theme-background-palette, 'card')}
     --background-card: #bbb
+    --border-color: #ddd
 
 .mat-dialog, .color-scheme-dialog
     --background: #{mat.get-color-from-palette(mat.$light-theme-background-palette, 'dialog')}
@@ -140,6 +141,15 @@ $my-dark-theme: mat.define-dark-theme((color: (primary: $my-primary,accent: $my-
 
         .mat-icon.mat-primary
             color: var(--primary-text)
+
+        .mat-progress-spinner.mat-primary circle, .mat-spinner.mat-primary circle
+            stroke: var(--primary-text)
+
+        .mat-progress-bar.mat-primary
+            .mat-progress-bar-buffer
+                background-color: #{mat.get-color-from-palette($my-primary, 600)}
+            .mat-progress-bar-fill::after
+                background-color: var(--primary-text)
 
         .mat-primary
 
